# crypto-market-analyzer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  EXCHANGE_BLOCKING_ANALYSIS.md  EXCHANGE_SETUP_GUIDE.md  GEMINI.md  Makefile  PHASE_1_1_COMPLETION.md  PHASE_1_2_COMPLETION.md  PHASE_2_3_COMPLETION.md  QUICK_START.md  README.md  SERVICES_STATUS.md  check_bybit_status.py  check_overnight_status.py  docker-compose.yml  docker-start.sh  generate_configs.py  strategy.txt  test-docker-services.sh  test-services.sh  test_binance_alternatives.py  test_binance_api.py  test_okx_detailed.py
collector-py/: .env.example  BLOCKCHAIN_API_SETUP.md  Dockerfile  pyproject.toml  requirements-test.txt  requirements.txt  test_all_trackers.py  test_blockchain_etl.py  test_bybit_collection.py  test_ethereum_whale.py  test_new_features.py  test_orderbook.py
collector-py/scripts/: backfill_binance_okx_1h.py  backfill_bybit_1h.py  backfill_funding.py  backfill_historical_ohlcv.py  backfill_history.py  backfill_liquidations.py  backfill_oi.py  backfill_oi_deep.py  backfill_trades.py  calibrate_cvd.py  check_backfill_progress.sh  check_version.py  collect_fred_full_history.py  init_events.py  init_global_indicators.py  inspect_ccxt.py  manual_liquidation_test.py  manual_rich_list.py  start.sh  test_ollama_analysis.py  test_telegram.py  update_rich_list.py  verify_data.py
collector-py/src/: __init__.py  binance_client.py  config.py  config_loader.py  error_handler.py  main.py  main_v1_backup.py  main_v2.py  main_v3.py  metrics_exporter.py  orchestrator.py  quality_checker.py
collector-py/tests/: test_db_loader.py  (+22 more)
(+457 files in other folders)
